--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage"
+  },
+  "transform": {
+    "\\.[jt]sx?$": [
+      "ts-jest",
+      {
+        "useESM": true
+      }
+    ]
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
