--- a/package.json
+++ b/package.json
@@ -8,17 +8,10 @@
   "license": "y",
   "private": false,
   "type": "module",
+  "transform": {},
   "scripts": {
     "start": "nodemon index.js",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage"
-  },
-  "transform": {
-    "\\.[jt]sx?$": [
-      "ts-jest",
-      {
-        "useESM": true
-      }
-    ]
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
